# sligart

./: .env.docker  .gitignore  Makefile  README.md  create_admin.sh  create_user.sh  docker-compose.yml  pyproject.toml  setup_caddy.sh
app/migrations/: .dockerignore  Dockerfile  alembic.ini  env.py  pyproject.toml
app/migrations/versions/: 02cde6b3561e_.py  19746a1e96ff_.py  33df43e6f4b0_.py  5942000d76d1_.py  6bdffc13b740_.py  ddeb55e6c1c9_.py  ee67cc45f803_.py
app/server/: .dockerignore  Dockerfile  exception_handlers.py  main.py  pyproject.toml  settings.py
app/server/auth/: dependencies.py
app/server/middleware/: logging_middleware.py
app/server/routers/: auth.py  public.py  test.py
app/server/routers/admin/: __init__.py  developers.py  projects.py  service_requests.py  technologies.py
app/server/services/: r2_service.py
app/server/storages/psql/: __init__.py  base.py
app/server/storages/psql/models/: __init__.py  developer_model.py  project_model.py  project_photo_model.py  service_request_model.py  technology_model.py  user_model.py
caddy/: Caddyfile
frontend/frontend-app/: package-lock.json  package.json
frontend/frontend-app/public/: index.html  manifest.json
frontend/frontend-app/src/: App.js  index.js
frontend/sligart-admin/: package-lock.json  package.json
frontend/sligart-admin/public/: admin-styles.css  index.html  manifest.json
frontend/sligart-admin/src/: App.js  authProvider.js  dataProvider.js
frontend/sligart-ui/: package-lock.json  package.json
frontend/sligart-ui/src/: App.js
(+63 files in other folders)
