[project]
name = "school-crm"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.13.5"
dependencies = [
    "server",
    "migrations",

]

[tool.uv.sources]
bot = { workspace = true }
server = { workspace = true }
migrations = { workspace = true }

[tool.uv]
package = false

[tool.uv.workspace]
members = ["app/*"]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[project.optional-dependencies]
dev = [
    "isort==6.0.1",
    "pre-commit==4.2.0",
    "ruff==0.12.4",
]
lint = [
    "mypy==1.17.0"
]
