[project]
name = "migrations"
version = "0.0.1"
dependencies = [
    "alembic==1.16.4",
    "flask-bcrypt==1.0.1",
    "flask-login==0.6.3",
    "flask-sqlalchemy==3.1.1",
    "pika==1.3.2",
    "asyncpg==0.30.0",
    "pydantic-settings==2.10.1",
    "pytz==2025.2",
    "sqlalchemy==2.0.41",
]

[tool.uv]
package = false