# app/server/pyproject.toml
[project]
name = "server"
version = "0.0.1"
dependencies = [
    "asyncpg==0.30.0",
    "fastapi[standard]==0.115.8",
    "sqlalchemy==2.0.41",
    "pydantic_settings==2.10.1",
    "python-jose[cryptography]==3.5.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.20",
    "boto3==1.40.12",
    "pillow==11.3.0"
]

[tool.uv]
package = false